Updated list styling to try and fix lag issue on ios

--- a/styles/components/_list.scss
+++ b/styles/components/_list.scss
@@ -52,13 +52,10 @@
         margin: 0 2rem;
         overflow: auto hidden;
         padding-bottom: 10px;
-        scroll-behavior: smooth;
-        scroll-snap-type: x proximity;
         width: 100%;
 
         > * {
             margin-right: 1rem;
-            scroll-snap-align: center;
         }
 
         > *:last-child {
@@ -66,9 +63,15 @@
         }
         
         @media only screen and (min-width: 768px) {
-    
+            scroll-behavior: smooth;
+            scroll-snap-type: x proximity;
+
             &::-webkit-scrollbar {
                 display: none;
+            }
+
+            > * {
+                scroll-snap-align: center;
             }
         }
     }
@@ -82,12 +85,10 @@
         
         .items {
             margin: 0;
-            scroll-snap-type: none;
 
             > * {
                 margin-left: 1rem;
                 margin-right: 0;
-                scroll-snap-align: none;
             }
     
             > *:last-child {
